# u2m-agent-experiment

./: .gitignore  databricks.yml
agent/src/: agent.py  databricks_anyauth-0.1.0-py3-none-any.whl  log-and-deploy.ipynb  requirements.txt
app/: .gitignore
app/src/: app.py  app.yaml  requirements.txt
app/src/static/: index.html
helper/: .gitignore  README.md  TEST_SUMMARY.md  pyproject.toml  requirements.txt  run_tests.py
helper/src/databricks/anyauth/: __init__.py  auth.py
helper/tests/: README.md  test_auth.py  test_auth_scenarios.py
